--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BloodBank</string>
+    <string name="home">Home</string>
 
     <string name="title_activity_login">Sign in</string>
 
@@ -18,6 +19,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="bloodinfo">Blood Info</string>
 
     <array name="gender">
         <item>Male</item>
